# EmpowerLink

./: README.md  ROLE_BASED_ACCESS_CONTROL.md  database.db  index.html  package-lock.json  package.json
User/: home.html  join.html
User/chat/: chat.css  chat.html  chat.js
User/courses/: courses.css  courses.html  courses.js  courses.js.backup
User/dashboard/: dashbard.html  dashboard.css  dashboard.js  user-stories.html
User/explore-communities/: explore-communities.css  explore-communities.html  explore-communities.js
backend/: README.md  database.db  main.py  pyproject.toml  requirements.txt  test_imports.py
backend/src/: auth.py  database.py  models.py  schemas.py  seed_data.py
backend/src/backend/: main.py  schema.py
backend/src/routes/: auth.py  beneficiaries.py  communities.py  dashboard.py  follow_ups.py  health.py  messages.py  stories.py  users.py  ventures.py
src/: App.jsx
src/components/: FacultySideBar.jsx  Navbar.jsx  UnauthorizedAccess.jsx
src/pages/: Beneficiaries.jsx  Chat.css  Chat.jsx  Explore.css  Explore.jsx  FacultyChart.jsx  FacultyDashboard.jsx  FacultyVentures.jsx  FollowUps.jsx  HomePage.jsx  Login.jsx  Stories.jsx  StudentHome.jsx  VisualDashboard.jsx
src/services/: api.js
src/utils/: PageToExcel.jsx
